tests/negative/gold/bad_global_name_test.gold
tests/negative/bad_global_name_test.toit:5:1: error: Invalid name
foo.bar:
^~~~~~~
Compilation failed.
